Redo Lint